fix: overlapping search term w/ clear button

--- a/features/PersonSearch/SearchInput.module.scss
+++ b/features/PersonSearch/SearchInput.module.scss
@@ -19,7 +19,7 @@
   padding-top: 10px;
   padding-bottom: 9px;
   padding-left: 16px;
-  padding-right: 16px;
+  padding-right: 44px;
 
   border: none;
   border-radius: 4px;
